# mlb-statmaster

./: .gitignore  README.md  backfill_odds.py  fix_doubles.py  fix_stolen_bases.py  grab_data.ipynb  grab_props.py  inspect_db.py  main.py  patch_update.py  pyproject.toml  restart_backend.sh  run_fix_sb.py  run_grabber.sh  update_data.py
backend/: database.py  fetch_missing_athletes.py  fetch_missing_athletes_safe.py  main.py  run.sh
backend/routers/: games.py  players.py  props.py  search.py  stats.py  teams.py
frontend/: README.md  index.html  metadata.json  package-lock.json  package.json  patch_player_modal.py  screenshot.cjs
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: BattingLeaders.tsx  DailyScoreboard.tsx  GamePage.tsx  GamePredictorPage.tsx  HomePage.tsx  LeagueLeadersPage.tsx  LeaguePlayersPage.tsx  LiveRoster.tsx  LiveTicker.tsx  PlayerModal.tsx  PlayerPage.tsx  PropAnalysisPage.tsx  PropsPage.tsx  SchedulePage.tsx  TeamNewsFeed.tsx  TeamsPage.tsx
frontend/src/components/bettors/: BettorsHeavenPage.tsx  NrfiTab.tsx
frontend/src/components/game/: GameOverviewTab.tsx  GamePage.tsx  GamePredictorPage.tsx  GamePropsTab.tsx  GameScoreboard.tsx  GameVideoPlayer.tsx  LinescoreMatrix.tsx  PlayByPlay.tsx  WinProbability.tsx
frontend/src/components/league/: LeagueLeadersPage.tsx  SchedulePage.tsx
frontend/src/components/player/: LeaguePlayersPage.tsx  PlayerPage.tsx
frontend/src/components/props/: BvpTab.tsx  OpponentBattingSplitsTab.tsx  OpponentHistoryTab.tsx  PropsPage.tsx  (+3 more)
frontend/src/context/: ScoreboardContext.tsx
(+9 files in other folders)
