[project]
name = "mlb-webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "databases>=0.9.0",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]
